fix: dark mode on calendar

--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -3,17 +3,15 @@
     font-size: 1.5rem;
 }
 
-.event-calendar .rbc-btn-group button {
+.my-event-calendar .rbc-btn-group button {
     color: white;
 }
 
-.event-calendar .rbc-off-range-bg{
+.my-event-calendar .rbc-off-range-bg {
     background-color: #1f1f1f;
 }
 
-/* Dark mode styles */
-@media (prefers-color-scheme: dark) {
-    .rbc-btn-group button {
-        color: #fff;
-    }
+.rbc-event:hover {
+    box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+    transition-duration: 300ms;
 }
